<resources>
    <string name="app_name">MLA Controller</string>
    <string name="reverse">reverse</string>
    <string name="one_step_back">one step back</string>
    <string name="stop">stop</string>
    <string name="one_step_forward">one step forward</string>
    <string name="forward">forward</string>
    <string name="start_scan">Start scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="rssi">%1$s dBm</string>
    <string name="scan_controllers">Scan controllers</string>
    <string name="mla_control">MLA Control</string>
</resources>